package controller;

public class AdminWindowController {

}
